# weather_forecast

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
lib/: CMakeLists.txt  requests.cpp  requests.h  weather_app.cpp  weather_app.h
